--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -22,10 +22,12 @@
 
     <EditText
         android:id="@+id/DNI"
-        android:layout_width="240dp"
+        android:layout_width="200dp"
         android:layout_height="43dp"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/edit_text_1"
         android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
         android:hint="DNI"
         android:inputType="number"
         android:textColor="#000000"
@@ -58,11 +60,13 @@
 
     <EditText
         android:id="@+id/NOMBRE"
-        android:layout_width="240dp"
+        android:layout_width="300dp"
         android:layout_height="44dp"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/edit_text_1"
         android:cursorVisible="true"
         android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
         android:hint="NOMBRE"
         android:inputType="textPersonName"
         android:textColor="#000000"
@@ -77,11 +81,12 @@
 
     <EditText
         android:id="@+id/APELLIDO"
-        android:layout_width="240dp"
+        android:layout_width="300dp"
         android:layout_height="46dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+        android:background="@drawable/edit_text_1"
         android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
         android:hint="APELLIDO"
         android:inputType="textPersonName"
         android:textColor="#000000"
@@ -90,53 +95,8 @@
         android:textColorLink="#4588BC"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="63dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/usuario" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="27dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@drawable/dni" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="32dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:srcCompat="@drawable/calendario" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="33dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:srcCompat="@drawable/hospital" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/fecha"
@@ -190,31 +150,6 @@
         app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EFECTOR" />
-
-    <View
-        android:id="@+id/divider6"
-        android:layout_width="1dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/divider8"
-        app:layout_constraintEnd_toStartOf="@+id/NOMBRE"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.592" />
-
-    <View
-        android:id="@+id/divider8"
-        android:layout_width="1dp"
-        android:layout_height="160dp"
-        android:background="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/divider2"
-        app:layout_constraintEnd_toEndOf="@+id/divider6"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/divider6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.953" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -354,6 +289,16 @@
             app:layout_constraintStart_toStartOf="@+id/CONTACTO"
             app:layout_constraintTop_toBottomOf="@+id/CONTACTO" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/fondo1"
+        app:layout_constraintEnd_toEndOf="@+id/NOMBRE"
+        app:layout_constraintTop_toBottomOf="@+id/NOMBRE"
+        app:srcCompat="@drawable/qr" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
