FALTA-> TRADUCIR LAS OPCIONES DE CARGA, OPTIMIZAR EL CODIGO EN LOS FACTORES DE RIESGO, CREAR UNA BASE DE DATOS CON LOS EFECTORES MAS CERCANOS

--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -31,7 +31,7 @@
             android:layout_height="80dp"
             android:background="@drawable/button1"
             android:onClick="TerminarRecorrido"
-            android:text="INICIAR RECORRIDO"
+            android:text="@string/iniciar_recorrido"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/button1"
             android:onClick="NuevaFamilia"
-            android:text="CARGAR FAMILIA"
+            android:text="@string/cargar_familia"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
