--- a/app/src/main/res/layout/alert_eliminar_editar.xml
+++ b/app/src/main/res/layout/alert_eliminar_editar.xml
@@ -24,7 +24,7 @@
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button1"
-        android:text="CANCELAR"
+        android:text="@string/cancelar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="@+id/EDITAR"
         app:layout_constraintStart_toStartOf="@+id/MOSTRARTELEFONOCONTCTO"
@@ -38,7 +38,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/rojo"
-        android:text="ELIMINAR"
+        android:text="@string/eliminar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/EDITAR"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/button1"
-        android:text="EDITAR"
+        android:text="@string/editar"
         android:textColor="#4A4A4A"
         app:layout_constraintEnd_toEndOf="@+id/MOSTRARTELEFONOCONTCTO"
         app:layout_constraintTop_toBottomOf="@+id/MOSTRARTELEFONOCONTCTO" />
@@ -65,7 +65,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="NOMBRE APELLIDO"
+        android:hint="@string/nombre_apellido_contacto"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="DNI"
+        android:hint="@string/dni"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -110,7 +110,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="FACTOR DE RIESGO"
+        android:hint="@string/factores_riesgo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -140,7 +140,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="CELULAR"
+        android:hint="@string/celular"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -155,7 +155,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="FIJO"
+        android:hint="@string/fijo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -170,7 +170,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="PERSONA CONTACTO"
+        android:hint="@string/persona_contacto"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -185,7 +185,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="TELEFONO CONTACTO"
+        android:hint="@string/telefono"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
