--- a/app/src/main/res/layout/alert_guardar_familia.xml
+++ b/app/src/main/res/layout/alert_guardar_familia.xml
@@ -24,7 +24,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button1"
-        android:text="GUARDAR"
+        android:text="@string/guardar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="@+id/CANCELAR1"
         app:layout_constraintEnd_toEndOf="@+id/MAS"
@@ -40,7 +40,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
-        android:text="CANCELAR"
+        android:text="@string/cancelar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/MAS"
@@ -57,7 +57,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="CALLE"
+        android:hint="@string/calle"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="NÚMERO"
+        android:hint="@string/numero"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -82,7 +82,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DOMICILIO GRUPO FAMILIAR"
+        android:text="@string/domicilio_familiar"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="MIEMBROS FAMILIARES"
+            android:text="@string/miembros_familiares"
             android:textColor="#FFFFFF"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
