--- a/app/src/main/res/layout/alert_iniciar_terminar_recorrido.xml
+++ b/app/src/main/res/layout/alert_iniciar_terminar_recorrido.xml
@@ -25,7 +25,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/button1"
-        android:text="SI"
+        android:text="@string/si"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:background="@drawable/button1"
-        android:text="NO"
+        android:text="@string/no"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="@+id/BTNSI"
         app:layout_constraintStart_toStartOf="parent"
