--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="5dp"
         android:background="@drawable/button1"
         android:onClick="Guardar"
-        android:text="TERMINAR GRUPO FAMILIAR"
+        android:text="@string/terminar_grupo_familiar"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:background="#4588BC"
             android:gravity="center_horizontal"
-            android:text="PERSONAS CARGADAS"
+            android:text="@string/personas_cargadas"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:text="NUEVA PERSONA"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/nueva_persona"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
