--- a/app/src/main/res/layout/alert_encuestador.xml
+++ b/app/src/main/res/layout/alert_encuestador.xml
@@ -12,7 +12,7 @@
         android:layout_height="40dp"
         android:background="#0E5891"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Encuestador"
+        android:text="@string/encuestador"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button1"
-        android:text="NUEVO"
+        android:text="@string/nuevo"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="@+id/INGRESAR"
         app:layout_constraintStart_toStartOf="@+id/ENCUESTADOR"
@@ -37,7 +37,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
-        android:text="INGRESAR"
+        android:text="@string/ingresar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/ENCUESTADOR"
