--- a/app/src/main/res/layout/alert_inicio.xml
+++ b/app/src/main/res/layout/alert_inicio.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
         android:onClick="NextMenuPrincipal"
-        android:text="CARGAR DATOS"
+        android:text="@string/cargar_datos"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="RELEVAMIENTO | GEOREFERENCIACIÓN"
+        android:text="@string/relevamiento_georeferenciacion"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
