--- a/app/src/main/res/layout/alert_nuevo_encuestador.xml
+++ b/app/src/main/res/layout/alert_nuevo_encuestador.xml
@@ -12,7 +12,7 @@
         android:layout_height="40dp"
         android:background="#0E5891"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Encuestador"
+        android:text="@string/encuestador"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
-        android:text="CANCELAR"
+        android:text="@string/cancelar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/EditNuevoEncuestador"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
-        android:text="GUARDAR"
+        android:text="@string/guardar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/EditNuevoEncuestador"
@@ -56,7 +56,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_1"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="APELLIDO NOMBRE"
+        android:hint="@string/nombre_apellido_contacto"
         android:textColor="#4A4A4A"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
