--- a/app/src/main/res/layout/alert_ocupacion.xml
+++ b/app/src/main/res/layout/alert_ocupacion.xml
@@ -12,7 +12,7 @@
         android:layout_height="40dp"
         android:background="#0E5891"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Encuestador"
+        android:text="@string/cargar_datos"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,10 +26,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
-        android:text="CANCELAR"
+        android:text="@string/cancelar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/Ocupacion"
         app:layout_constraintTop_toBottomOf="@+id/Ocupacion" />
 
@@ -38,7 +37,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button1"
-        android:text="GUARDAR"
+        android:text="@string/guardar"
         android:textColor="#4A4A4A"
         app:layout_constraintBottom_toBottomOf="@+id/CANCELAR3"
         app:layout_constraintEnd_toEndOf="@+id/Ocupacion"
@@ -54,7 +53,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/edit_text_1"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="OCUPACIÓN"
+        android:hint="@string/ocupacion"
         android:textColor="#4A4A4A"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
