FALTA-> TRADUCIR LAS OPCIONES DE CARGA, CREAR UNA BASE DE DATOS CON LOS EFECTORES MAS CERCANOS

--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
         android:onClick="GuardarPersona"
-        android:text="GUARDAR PERSONA"
+        android:text="@string/guardar_persona"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="DNI"
+        android:hint="@string/dni"
         android:inputType="number"
         android:textColor="#000000"
         android:textColorHighlight="#4588BC"
@@ -50,7 +50,7 @@
         android:cursorVisible="true"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="NOMBRE"
+        android:hint="@string/nombre"
         android:inputType="textPersonName"
         android:textColor="#000000"
         android:textColorHighlight="#4588BC"
@@ -70,7 +70,7 @@
         android:background="@drawable/edit_text_1"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="APELLIDO"
+        android:hint="@string/apellido"
         android:inputType="textPersonName"
         android:textColor="#000000"
         android:textColorHighlight="#4588BC"
@@ -90,7 +90,7 @@
         android:clickable="true"
         android:focusable="false"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="MES DIA, AÑO"
+        android:hint="@string/fecha_nacimiento"
         android:onClick="Fecha"
         android:textColor="#000000"
         android:textColorHighlight="#4588BC"
@@ -154,7 +154,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Completado: 00%"
+                    android:text="@string/completado_cero"
                     android:textColor="#FFFFFF"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toTopOf="@+id/AVANCEEDUCACION"
@@ -167,7 +167,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="EDUCACION"
+                    android:text="@string/educacion"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/COMPLETADOEDUCACION"
@@ -216,7 +216,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Completado: 00%"
+                    android:text="@string/completado_cero"
                     android:textColor="#FFFFFF"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toTopOf="@+id/AVANCETRABAJO"
@@ -229,7 +229,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="OCUPACION"
+                    android:text="@string/ocupacion"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/COMPLETADOTRABAJO"
@@ -275,7 +275,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Completado: 00%"
+                    android:text="@string/completado_cero"
                     android:textColor="#FFFFFF"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toTopOf="@+id/AVANCECONTACTO"
@@ -288,7 +288,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="CONTACTO"
+                    android:text="@string/contacto"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/COMPLETADOCONTACTO"
@@ -337,7 +337,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Completado: 00%"
+                    android:text="@string/completado_cero"
                     android:textColor="#FFFFFF"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toTopOf="@+id/AVANCEEFECTOR"
@@ -350,7 +350,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="EFECTOR"
+                    android:text="@string/efector"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/COMPLETADOEFECTOR"
@@ -395,7 +395,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Completado: 00%"
+                    android:text="@string/completado_cero"
                     android:textColor="#FFFFFF"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toTopOf="@+id/AVANCEOBSERVACIONES"
@@ -408,7 +408,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="OBSERVACIONES"
+                    android:text="@string/observaciones"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/COMPLETADOOBSERVACIONES"
@@ -434,7 +434,7 @@
                 android:layout_height="200dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/fondo2"
-                android:onClick="TipoFactores"
+                android:onClick="Factores"
                 app:layout_constraintBottom_toTopOf="@+id/EMPEZAR2"
                 app:layout_constraintStart_toStartOf="@+id/EMPEZAR2"
                 app:layout_constraintTop_toTopOf="parent">
@@ -455,7 +455,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Completado: 00%"
+                    android:text="@string/completado_cero"
                     android:textColor="#FFFFFF"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toTopOf="@+id/AVANCEFACTORES"
@@ -470,7 +470,7 @@
                     android:layout_marginBottom="10dp"
                     android:foregroundGravity="center_horizontal"
                     android:gravity="center_horizontal"
-                    android:text="FACTORES DE RIESGO"
+                    android:text="@string/factores_riesgo"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toTopOf="@+id/COMPLETADOFACTORES"
